login  local changes

--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
 PORT = 3001
-# MONGO = mongodb+srv://arunarivalagan774:arunhari27@books.lzrfp0w.mongodb.net/?retryWrites=true&w=majority&appName=Books
+MONGO = mongodb+srv://arunarivalagan774:arunhari27@books.lzrfp0w.mongodb.net/?retryWrites=true&w=majority&appName=Books
 JWT_SECRET = arun
-MONGO = mongodb://localhost:27017
+
