Logout Frontend Function is finished

--- a/backend/.env
+++ b/backend/.env
@@ -3,3 +3,4 @@ MONGO = "mongodb+srv://arunarivalagan774:arunhari27@books.lzrfp0w.mongodb.net/?r
 JWT_SECRET = arun
 # MONGO = mongodb://localhost:27017
 CLIENT_URL = http://localhost:5173
+Student_JWT_SECRET = student
