User and Admin route Login is fixed

--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,4 @@
 PORT = 5000
 MONGO = "mongodb+srv://arunarivalagan774:arunhari27@books.lzrfp0w.mongodb.net/?retryWrites=true&w=majority&appName=Books"
 JWT_SECRET = arun
-# MONGO = mongodb://localhost:27017
-CLIENT_URL = http://localhost:5173
-Student_JWT_SECRET = student
+STUDENT_JWT_SECRET = student
